@@ -3,7 +3,8 @@
 *******************************************************************************
 
 === 1.0.16 ===
-
+* Added 'zero' property to tk::GraphAxis to associate the position of origin on
+  the axis with some value.
 
 === 1.0.15 ===
 * Updated module versions in dependencies.
